[package]
name = "digital-sig"
version = "0.1.0"
authors = ["Magamedrasul Ibragimov <curryrasul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.4.0"
rand = "0.8.0"
num-bigint = { version = "0.4", features = ["rand"] }
rust-crypto = "^0.2"
